fix jumping search button

--- a/sass/elements/_custom_search_elements.scss
+++ b/sass/elements/_custom_search_elements.scss
@@ -48,7 +48,6 @@ body.html {
         color: $white;
         background: lighten($dark_grey5, 10%);
         @include box-shadow(0 2px 2px rgba($dark_grey3, 0.2));
-        margin-right: 1px;
       }
     }
   }
